# apex-rust

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
configs/: large.yaml  large_vision.yaml  medium.yaml  medium_vision.yaml  small.yaml  small_vision.yaml  tiny.yaml  tiny_dora.yaml  tiny_dora_dpo.yaml  tiny_dora_inference.yaml  tiny_lora.yaml  tiny_lora_dpo.yaml  tiny_lora_inference.yaml  tiny_qdora.yaml  tiny_qdora_dpo.yaml  tiny_qdora_inference.yaml  tiny_qlora.yaml  tiny_qlora_dpo.yaml  tiny_qlora_inference.yaml  tiny_vision.yaml
examples/: forward_pass.rs  generate.rs  inspect_model.rs  peft_summary.rs  tokenizer_chat.rs  vision_forward.rs
src/: error.rs  lib.rs  main.rs
src/alignment/: combined_reward.rs  constitutional.rs  dpo.rs  grpo.rs  mod.rs  prm.rs  reward.rs
src/config/: mod.rs  presets.rs  schema.rs
src/data/: batching.rs  mod.rs  readers.rs  types.rs
src/eval/: mod.rs
src/generation/: mod.rs
src/model/: apex_model.rs  attention.rs  block.rs  ffn.rs  linear.rs  load_balancer.rs  loading.rs  mask.rs  mod.rs  multi_token_head.rs  norm.rs  rope.rs  skip_gate.rs
src/tensor/: mod.rs
src/tokenizer/: constants.rs  core.rs  mod.rs  trainer.rs
src/train/: autograd.rs  checkpoint.rs  losses.rs  mod.rs  optimizer.rs  runner.rs  scheduler.rs  variables.rs
src/utils/: diagram.rs  flops.rs  inspection.rs  mod.rs  params.rs  runtime.rs  shape.rs
src/vision/: block.rs  encoder.rs  mod.rs  preprocess.rs  projector.rs  (+1 more)
tests/: autograd_runtime.rs  cli.rs  cli_more.rs  config_data.rs  core.rs  training_checkpoint.rs
